fix: Ensure sufficient contrast

--- a/@isle-project/components/internal/lesson/lesson.css
+++ b/@isle-project/components/internal/lesson/lesson.css
@@ -58,7 +58,7 @@ pre {
 
 pre code {
 	font-size: 87.5%;
-	color: #e83e8c;
+	color: #db0c6b;
 	word-break: break-word;
 }
 
@@ -534,7 +534,7 @@ h4 {
 }
 
 a {
-	color: #007bff;
+	color: #016ee3;
 }
 
 .nav-pills .nav-link.active {
